--- a/jmax4you-cors/jmax4you-cors1/src/main/resources/static/index.html
+++ b/jmax4you-cors/jmax4you-cors1/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body style="text-align: center;">
+<h1 class="hone">应用1</h1>
 <br/>
 <a class="test1" href="javascript:void(0);">简单Get请求</a><br/>
 <a class="test2" href="javascript:void(0);">简单Post表单请求</a><br/>
@@ -14,6 +15,7 @@
 <p id="jsonpTxt"></p>
 </body>
 <script src="jquery.js"></script>
+<link href="css/index.css" rel="stylesheet">
 <script>
     $(".test1").on("click", function () {
         $.ajax(
